@@ -14,9 +14,6 @@
  * @package plugins
  * @subpackage fortune
  *
- * FIXME
- * There should be no code in setup.php, just hook registrations. Create functions.php
- * and move the code there.
  */
 
 /**
@@ -27,8 +24,7 @@ function squirrelmail_plugin_init_fortune() {
   global $squirrelmail_plugin_hooks;
 
   $squirrelmail_plugin_hooks['mailbox_index_before']['fortune'] = 'fortune';
-  $squirrelmail_plugin_hooks['options_display_inside']['fortune'] = 'fortune_options';
-  $squirrelmail_plugin_hooks['options_display_save']['fortune'] = 'fortune_save';
+  $squirrelmail_plugin_hooks['optpage_loadhook_display']['fortune'] = 'fortune_optpage_loadhook_display';
   $squirrelmail_plugin_hooks['loading_prefs']['fortune'] = 'fortune_load';
 }
 
@@ -39,27 +35,13 @@ function squirrelmail_plugin_init_fortune() {
 function fortune() {
     global $fortune_visible, $color;
 
-    if (!$fortune_visible) {
+    // Don't show fortune if not set, or not enabled //
+    if (!isset($fortune_visible) || !$fortune_visible) {
         return;
     }
 
-    $fortune_location = '/usr/games/fortune';
-    $exist = is_file($fortune_location);
-    echo "<center><table cellpadding=\"0\" cellspacing=\"0\" border=\"0\" bgcolor=\"$color[10]\">\n".
-        "<tr><td><table width=\"100%\" cellpadding=\"2\" cellspacing=\"1\" border=\"0\" bgcolor=\"$color[5]\">\n".
-        "<tr><td align=\"center\">\n";
-    echo '<table><tr><td>';
-    if (!$exist) {
-        printf(_("%s is not found."),$fortune_location);
-    } else {
-        // display only short fortune cookies
-        $fortune_command = $fortune_location . ' -s';
-        echo '<center><em>' . _("Today's Fortune") . '</em></center><br /><pre>' .
-            htmlspecialchars(shell_exec($fortune_command)) .
-            '</pre>';
-    }
-
-    echo '</td></tr></table></td></tr></table></td></tr></table></center>';
+    include_once(SM_PATH . 'plugins/fortune/fortune_functions.php');
+    fortune_show();
 }
 
 /**
@@ -76,28 +58,9 @@ function fortune_load() {
  * Add fortune options
  * @access private
  */
-function fortune_options() {
-    global $fortune_visible;
-
-    echo "<tr>" . html_tag('td',_("Fortunes:"),'right','','nowrap') . "\n";
-    echo '<td><input name="fortune_fortune_visible" type="checkbox"';
-    if ($fortune_visible)
-        echo ' checked="checked"';
-    echo " /> " . _("Show fortunes at top of mailbox") . "</td></tr>\n";
-}
-
-/**
- * Save fortune prefs
- * @access private
- */
-function fortune_save() {
-    global $username,$data_dir;
-
-    if (sqgetGlobalVar('fortune_fortune_visible',$fortune_fortune_visible,SQ_POST)) {
-        setPref($data_dir, $username, 'fortune_visible', '1');
-    } else {
-        setPref($data_dir, $username, 'fortune_visible', '');
-    }
+function fortune_optpage_loadhook_display() {
+    include_once(SM_PATH . 'plugins/fortune/fortune_functions.php');
+    fortune_show_options();
 }
 
 ?>
